modified:   churn-prediction/notebooks/EDA.ipynb

--- a/churn-prediction/notebooks/EDA.ipynb
+++ b/churn-prediction/notebooks/EDA.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "4. **Detect Anomalies and Outliers**: detection of anomalies or outliers that could impact the performance of the predictive model. By understanding these anomalies, appropriate treatment can be applied, such as removing outliers or using robust modeling techniques.\n",
     "\n",
-    "5. **Communicate Findings Effectively**: provides clear and concise insights about the dataset and guidelines for feature engineering. "
+    "5. **Communicate Findings Effectively**: conclusions and concise insights about the dataset. Guidelines for feature engineering. "
    ]
   },
   {
@@ -1537,6 +1537,14 @@
    "metadata": {},
    "source": [
     "For this specific problem, I will just **compare the distribution of the features in the train and test dataset**. As we are considering static data, this is not a big issue, but it should be considered for real-world application of machine learning models in production."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "> <span style=\"background-color:#77b072\">There are similar distributions for the features in each dataset.</span>"
    ]
   },
   {
