modified:   churn-prediction/notebooks/EDA.ipynb 	modified:   churn-prediction/notebooks/feature_engineering.ipynb 	modified:   churn-prediction/notebooks/model_training.ipynb 	modified:   churn-prediction/src/requirements.txt

--- a/churn-prediction/notebooks/model_training.ipynb
+++ b/churn-prediction/notebooks/model_training.ipynb
@@ -9,22 +9,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import pandas as pd\n",
+    "> The \"Model Training and Evaluation\" notebook aims to train a machine learning model for the churn prediction task and evaluate its performance. \n",
     "\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.naive_bayes import GaussianNB\n",
-    "from sklearn.metrics import roc_curve, auc\n",
-    "import matplotlib.pyplot as plt"
+    "The following steps are covered in this notebook:\n",
+    "\n",
+    "1. **Feature Selection:** Select the desired features from the _\"data/04_feature/features.csv\"_. Remerbering that it was performed multiple feature engineering options for the same feature, only one option will be selected at a time to input the models.\n",
+    "\n",
+    "3. **Model Selection:** Several machine learning models are evaluated and compared to identify the best-performing model for churn prediction. Different algorithms such as logistic regression, random forests, or gradient boosting may be considered.\n",
+    "\n",
+    "4. **Data Split:** Split the data into training and validation set. Also consider some k-fold splits to cross validation.\n",
+    "\n",
+    "5. **Model Training:** The selected models are trained using the training dataset. Model hyperparameters are tuned using techniques like grid search or random search to optimize the model's performance.\n",
+    "\n",
+    "6. **Model Evaluation:** The trained model is evaluated using the testing dataset. Performance metrics such as accuracy, precision, recall, F1 score and ROC auc are computed to assess the model's predictive ability. Additionally, visualizations like confusion matrix or ROC curve may be used to analyze the model's performance.\n",
+    "\n",
+    "7. **Model Fine-tuning:** If necessary, the model is fine-tuned by adjusting hyperparameters or exploring ensemble techniques to further enhance its performance.\n",
+    "\n",
+    "8. **Model Deployment:** The deployment will be done using the Kedro framework for the model with the best performance."
    ]
   },
   {
@@ -33,50 +38,148 @@
    "metadata": {},
    "outputs": [
     {
+     "ename": "ImportError",
+     "evalue": "cannot import name 'RandomOverSampler' from 'imblearn.under_sampling' (/home/laizaparizotto/kedro-environment-churn-prediction/.venv/lib/python3.10/site-packages/imblearn/under_sampling/__init__.py)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[11], line 14\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39msklearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mmetrics\u001b[39;00m \u001b[39mimport\u001b[39;00m roc_curve, auc\n\u001b[1;32m     12\u001b[0m \u001b[39mimport\u001b[39;00m \u001b[39mmatplotlib\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39mpyplot\u001b[39;00m \u001b[39mas\u001b[39;00m \u001b[39mplt\u001b[39;00m\n\u001b[0;32m---> 14\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mimblearn\u001b[39;00m\u001b[39m.\u001b[39;00m\u001b[39munder_sampling\u001b[39;00m \u001b[39mimport\u001b[39;00m RandomUnderSampler, RandomOverSampler\n\u001b[1;32m     15\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mxgboost\u001b[39;00m \u001b[39mimport\u001b[39;00m XGBClassifier\n",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'RandomOverSampler' from 'imblearn.under_sampling' (/home/laizaparizotto/kedro-environment-churn-prediction/.venv/lib/python3.10/site-packages/imblearn/under_sampling/__init__.py)"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score, roc_auc_score\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.naive_bayes import GaussianNB\n",
+    "from sklearn.metrics import roc_curve, auc\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "from imblearn.under_sampling import RandomUnderSampler, RandomOverSampler\n",
+    "from xgboost import XGBClassifier\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 1. Feature Selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['Tenure', 'NumOfProducts', 'HasCrCard', 'IsActiveMember', 'Exited',\n",
+       "       'EstimatedSalaryScaled', 'AgeScaled', 'CreditScoreScaled',\n",
+       "       'BalanceScaled', 'Balance_IsZero', 'Balance_EstimatedSalary_Ratio',\n",
+       "       'Tenure_Age_Ratio', 'Geography_Germany', 'Geography_Spain',\n",
+       "       'Gender_Male', 'CreditScoreBins_Medium', 'CreditScoreBins_High',\n",
+       "       'CreditScoreBins_Very High', 'Balance_Bins_50k-100k',\n",
+       "       'Balance_Bins_100k-150k', 'Balance_Bins_150k-200k',\n",
+       "       'Balance_Bins_200k-250k'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load Data with all features\n",
+    "df_all_features = pd.read_csv('../data/04_feature/features.csv')\n",
+    "\n",
+    "# Print columns\n",
+    "df_all_features.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# First option - only using scaled values instead of bins. \n",
+    "df_features_01 = df_all_features.drop(['CreditScoreBins_Medium', 'CreditScoreBins_High', \n",
+    "                                       'CreditScoreBins_Very High', 'Balance_Bins_50k-100k',\n",
+    "                                       'Balance_Bins_100k-150k', 'Balance_Bins_150k-200k',\n",
+    "                                       'Balance_Bins_200k-250k'], axis=1\n",
+    "                                       )"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It could be evaluated each feature individually to find if there is any improvement in transforming either into bins or scaling the features. This process will be skip to simplify the problem."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Classifier: RandomForestClassifier\n",
-      "Accuracy: 0.8635\n",
-      "Precision: 0.7326\n",
-      "Recall: 0.4809\n",
-      "F1-score: 0.5806\n",
-      "AUC-ROC: 0.7190\n",
+      "Accuracy: 0.8420\n",
+      "Precision: 0.6915\n",
+      "Recall: 0.3537\n",
+      "F1-score: 0.4680\n",
+      "AUC-ROC: 0.6576\n",
       "-----------------------------------------\n",
       "Classifier: LogisticRegression\n",
-      "Accuracy: 0.8145\n",
-      "Precision: 0.5764\n",
-      "Recall: 0.2112\n",
-      "F1-score: 0.3091\n",
-      "AUC-ROC: 0.5866\n",
+      "Accuracy: 0.8165\n",
+      "Precision: 0.6121\n",
+      "Recall: 0.1807\n",
+      "F1-score: 0.2790\n",
+      "AUC-ROC: 0.5763\n",
       "-----------------------------------------\n",
       "Classifier: SVC\n",
-      "Accuracy: 0.8330\n",
-      "Precision: 0.9155\n",
-      "Recall: 0.1654\n",
-      "F1-score: 0.2802\n",
-      "AUC-ROC: 0.5808\n",
+      "Accuracy: 0.8415\n",
+      "Precision: 0.7639\n",
+      "Recall: 0.2799\n",
+      "F1-score: 0.4097\n",
+      "AUC-ROC: 0.6294\n",
       "-----------------------------------------\n",
       "Classifier: KNeighborsClassifier\n",
-      "Accuracy: 0.8405\n",
-      "Precision: 0.6814\n",
-      "Recall: 0.3537\n",
-      "F1-score: 0.4657\n",
-      "AUC-ROC: 0.6566\n",
+      "Accuracy: 0.8000\n",
+      "Precision: 0.4842\n",
+      "Recall: 0.2723\n",
+      "F1-score: 0.3485\n",
+      "AUC-ROC: 0.6007\n",
       "-----------------------------------------\n",
-      "Classifier: GaussianNB\n",
-      "Accuracy: 0.8315\n",
-      "Precision: 0.6867\n",
-      "Recall: 0.2621\n",
-      "F1-score: 0.3794\n",
-      "AUC-ROC: 0.6164\n",
+      "Classifier: XGBClassifier\n",
+      "Accuracy: 0.8525\n",
+      "Precision: 0.6976\n",
+      "Recall: 0.4402\n",
+      "F1-score: 0.5398\n",
+      "AUC-ROC: 0.6968\n",
       "-----------------------------------------\n"
      ]
     }
    ],
    "source": [
     "#Load data\n",
-    "df = pd.read_csv('data/features.csv')\n",
+    "df = pd.read_csv('../data/04_feature/new_features.csv')\n",
+    "#df = df_all_features\n",
     "\n",
     "# Create an empty DataFrame to store the model performance\n",
     "model_control = pd.DataFrame(columns=['Model', 'Accuracy', 'Precision', 'Recall', 'F1-Score', 'AUC-ROC'])\n",
@@ -86,13 +189,17 @@
     "y = df['Exited']\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
     "\n",
+    "sc = StandardScaler()\n",
+    "X_train = sc.fit_transform(X_train)\n",
+    "X_test = sc.transform (X_test)\n",
+    "\n",
     "# Define a list of classifiers to train\n",
     "classifiers = [\n",
     "    RandomForestClassifier(),\n",
-    "    LogisticRegression(),\n",
-    "    SVC(),\n",
+    "    LogisticRegression(max_iter=10000),\n",
+    "    SVC(max_iter=10000),\n",
     "    KNeighborsClassifier(),\n",
-    "    GaussianNB()\n",
+    "    XGBClassifier() \n",
     "]\n",
     "\n",
     "# Train and evaluate each classifier\n",
@@ -125,11 +232,245 @@
     "\n",
     "    # Append the model performance to the model_control DataFrame\n",
     "    row = pd.DataFrame([[classifier.__class__.__name__, accuracy, precision, recall, f1, roc_auc]],\n",
+    "                    columns=['Model', 'Accuracy', 'Precision', 'Recall', 'F1-Score', 'AUC-ROC'])\n",
+    "    model_control = pd.concat([model_control, row], ignore_index=True)\n",
+    "\n",
+    "# Save the model_control DataFrame to a CSV file\n",
+    "model_control.to_csv('../docs/model_control_new_new_features.csv', index=False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Applying Undersampling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classifier: RandomForestClassifier\n",
+      "Accuracy: 0.7915\n",
+      "Precision: 0.4808\n",
+      "Recall: 0.7634\n",
+      "F1-score: 0.5900\n",
+      "AUC-ROC: 0.7809\n",
+      "-----------------------------------------\n",
+      "Classifier: LogisticRegression\n",
+      "Accuracy: 0.7210\n",
+      "Precision: 0.3865\n",
+      "Recall: 0.7150\n",
+      "F1-score: 0.5018\n",
+      "AUC-ROC: 0.7187\n",
+      "-----------------------------------------\n",
+      "Classifier: SVC\n",
+      "Accuracy: 0.7305\n",
+      "Precision: 0.3936\n",
+      "Recall: 0.6870\n",
+      "F1-score: 0.5005\n",
+      "AUC-ROC: 0.7141\n",
+      "-----------------------------------------\n",
+      "Classifier: KNeighborsClassifier\n",
+      "Accuracy: 0.6935\n",
+      "Precision: 0.3529\n",
+      "Recall: 0.6718\n",
+      "F1-score: 0.4628\n",
+      "AUC-ROC: 0.6853\n",
+      "-----------------------------------------\n",
+      "Classifier: XGBClassifier\n",
+      "Accuracy: 0.7815\n",
+      "Precision: 0.4660\n",
+      "Recall: 0.7684\n",
+      "F1-score: 0.5802\n",
+      "AUC-ROC: 0.7766\n",
+      "-----------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load data\n",
+    "# df = pd.read_csv('../data/04_feature/features.csv')\n",
+    "df = df_features_01\n",
+    "\n",
+    "# Create an empty DataFrame to store the model performance\n",
+    "model_control = pd.DataFrame(columns=['Model', 'Accuracy', 'Precision', 'Recall', 'F1-Score', 'AUC-ROC'])\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X = df.drop('Exited', axis=1)\n",
+    "y = df['Exited']\n",
+    "\n",
+    "# Apply undersampling\n",
+    "undersampler = RandomUnderSampler(random_state=42)\n",
+    "X_train_resampled, y_train_resampled = undersampler.fit_resample(X_train, y_train)\n",
+    "\n",
+    "# Define a list of classifiers to train\n",
+    "classifiers = [\n",
+    "    RandomForestClassifier(),\n",
+    "    LogisticRegression(max_iter=10000),\n",
+    "    SVC(max_iter=10000),\n",
+    "    KNeighborsClassifier(),\n",
+    "    XGBClassifier()\n",
+    "]\n",
+    "\n",
+    "# Train and evaluate each classifier\n",
+    "for classifier in classifiers:\n",
+    "    # Train the classifier\n",
+    "    classifier.fit(X_train_resampled, y_train_resampled)\n",
+    "\n",
+    "    # Make predictions on the test set\n",
+    "    y_pred = classifier.predict(X_test)\n",
+    "\n",
+    "    # Evaluate metrics\n",
+    "    accuracy = accuracy_score(y_test, y_pred)\n",
+    "    precision = precision_score(y_test, y_pred)\n",
+    "    recall = recall_score(y_test, y_pred)\n",
+    "    f1 = f1_score(y_test, y_pred)\n",
+    "    roc_auc = roc_auc_score(y_test, y_pred)\n",
+    "\n",
+    "    # Print the evaluation results\n",
+    "    print(f\"Classifier: {classifier.__class__.__name__}\")\n",
+    "    print(f\"Accuracy: {accuracy:.4f}\")\n",
+    "    print(f\"Precision: {precision:.4f}\")\n",
+    "    print(f\"Recall: {recall:.4f}\")\n",
+    "    print(f\"F1-score: {f1:.4f}\")\n",
+    "    print(f\"AUC-ROC: {roc_auc:.4f}\")\n",
+    "\n",
+    "    # Plot the ROC curve\n",
+    "    fpr, tpr, _ = roc_curve(y_test, y_pred)\n",
+    "    roc_auc = auc(fpr, tpr)\n",
+    "    print(\"-----------------------------------------\")\n",
+    "\n",
+    "    # Append the model performance to the model_control DataFrame\n",
+    "    row = pd.DataFrame([[classifier.__class__.__name__, accuracy, precision, recall, f1, roc_auc]],\n",
     "                       columns=['Model', 'Accuracy', 'Precision', 'Recall', 'F1-Score', 'AUC-ROC'])\n",
     "    model_control = pd.concat([model_control, row], ignore_index=True)\n",
     "\n",
     "# Save the model_control DataFrame to a CSV file\n",
-    "model_control.to_csv('models/model_control.csv', index=False)"
+    "model_control.to_csv('../docs/model_control_undersampling.csv', index=False)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Aplying Oversampling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Classifier: RandomForestClassifier\n",
+      "Accuracy: 0.8535\n",
+      "Precision: 0.6656\n",
+      "Recall: 0.5115\n",
+      "F1-score: 0.5784\n",
+      "AUC-ROC: 0.7243\n",
+      "-----------------------------------------\n",
+      "Classifier: LogisticRegression\n",
+      "Accuracy: 0.7225\n",
+      "Precision: 0.3893\n",
+      "Recall: 0.7252\n",
+      "F1-score: 0.5067\n",
+      "AUC-ROC: 0.7235\n",
+      "-----------------------------------------\n",
+      "Classifier: SVC\n",
+      "Accuracy: 0.7240\n",
+      "Precision: 0.3882\n",
+      "Recall: 0.7023\n",
+      "F1-score: 0.5000\n",
+      "AUC-ROC: 0.7158\n",
+      "-----------------------------------------\n",
+      "Classifier: KNeighborsClassifier\n",
+      "Accuracy: 0.7130\n",
+      "Precision: 0.3643\n",
+      "Recall: 0.6183\n",
+      "F1-score: 0.4585\n",
+      "AUC-ROC: 0.6772\n",
+      "-----------------------------------------\n",
+      "Classifier: XGBClassifier\n",
+      "Accuracy: 0.8310\n",
+      "Precision: 0.5641\n",
+      "Recall: 0.6158\n",
+      "F1-score: 0.5888\n",
+      "AUC-ROC: 0.7497\n",
+      "-----------------------------------------\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Load data\n",
+    "# df = pd.read_csv('../data/04_feature/features.csv')\n",
+    "df = df_all_features\n",
+    "\n",
+    "# Create an empty DataFrame to store the model performance\n",
+    "model_control = pd.DataFrame(columns=['Model', 'Accuracy', 'Precision', 'Recall', 'F1-Score', 'AUC-ROC'])\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X = df.drop('Exited', axis=1)\n",
+    "y = df['Exited']\n",
+    "\n",
+    "# Apply oversampling\n",
+    "oversampler = RandomOverSampler(random_state=42)\n",
+    "X_train_resampled, y_train_resampled = oversampler.fit_resample(X_train, y_train)\n",
+    "\n",
+    "# Define a list of classifiers to train\n",
+    "classifiers = [\n",
+    "    RandomForestClassifier(),\n",
+    "    LogisticRegression(max_iter=10000),\n",
+    "    SVC(max_iter=10000),\n",
+    "    KNeighborsClassifier(),\n",
+    "    XGBClassifier()\n",
+    "]\n",
+    "\n",
+    "# Train and evaluate each classifier\n",
+    "for classifier in classifiers:\n",
+    "    # Train the classifier\n",
+    "    classifier.fit(X_train_resampled, y_train_resampled)\n",
+    "\n",
+    "    # Make predictions on the test set\n",
+    "    y_pred = classifier.predict(X_test)\n",
+    "\n",
+    "    # Evaluate metrics\n",
+    "    accuracy = accuracy_score(y_test, y_pred)\n",
+    "    precision = precision_score(y_test, y_pred)\n",
+    "    recall = recall_score(y_test, y_pred)\n",
+    "    f1 = f1_score(y_test, y_pred)\n",
+    "    roc_auc = roc_auc_score(y_test, y_pred)\n",
+    "\n",
+    "    # Print the evaluation results\n",
+    "    print(f\"Classifier: {classifier.__class__.__name__}\")\n",
+    "    print(f\"Accuracy: {accuracy:.4f}\")\n",
+    "    print(f\"Precision: {precision:.4f}\")\n",
+    "    print(f\"Recall: {recall:.4f}\")\n",
+    "    print(f\"F1-score: {f1:.4f}\")\n",
+    "    print(f\"AUC-ROC: {roc_auc:.4f}\")\n",
+    "\n",
+    "    # Plot the ROC curve\n",
+    "    fpr, tpr, _ = roc_curve(y_test, y_pred)\n",
+    "    roc_auc = auc(fpr, tpr)\n",
+    "    print(\"-----------------------------------------\")\n",
+    "\n",
+    "    # Append the model performance to the model_control DataFrame\n",
+    "    row = pd.DataFrame([[classifier.__class__.__name__, accuracy, precision, recall, f1, roc_auc]],\n",
+    "                       columns=['Model', 'Accuracy', 'Precision', 'Recall', 'F1-Score', 'AUC-ROC'])\n",
+    "    model_control = pd.concat([model_control, row], ignore_index=True)\n",
+    "\n",
+    "# Save the model_control DataFrame to a CSV file\n",
+    "model_control.to_csv('../docs/model_control_oversampling.csv', index=False)\n"
    ]
   },
   {
