modified:   churn-prediction/notebooks/feature_engineering.ipynb

--- a/churn-prediction/notebooks/feature_engineering.ipynb
+++ b/churn-prediction/notebooks/feature_engineering.ipynb
@@ -34,29 +34,28 @@
     "\n",
     "**_Drop:_**\n",
     "> Reason: no effect on \"Exited\".\n",
-    "> - **CustomerId**: random values of customer ID.\n",
-    "> - **Surname**: customer surname.\n",
+    "> - `CustomerId`: random values of customer ID.\n",
+    "> - `Surname`: customer surname.\n",
     "\n",
     "\n",
     "**_One-hot encoding:_**\n",
-    "> Reason: cathegorical variables\n",
-    "> - **Geography**: geographpy of the customer. \n",
-    "> - **Gender**: customer gender.\n",
-    "> - **NumOfProducts**: number of products that a customer has purchased through the bank\n",
+    "> Reason: categorical variables\n",
+    "> - `Geography`: geography of the customer. \n",
+    "> - `Gender`: customer gender.\n",
+    "> - `NumOfProducts`: number of products that a customer has purchased through the bank\n",
     "\n",
     "\n",
     "**_Binning into some intervals:_**\n",
     "> Reason: can help capture non-linear relationships and patterns that might not be apparent when treating the variable as continuous\n",
-    "> - **CreditScore**: credit score of customer.\n",
+    "> - `CreditScore`: credit score of customer.\n",
     "\n",
     "**_No transformation for now:_**\n",
-    "> - **IsActiveMember**: active customers.\n",
-    "> - **Tenure**: years the customer is a client of the bank.\n",
-    "> - **HasCrCard**: denotes whether or not a customer has a credit card. \n",
-    "> - **Age**: customer age. *[scaled later]*\n",
-    "> - **EstimatedSalary**: customer estimated salary. *[scaled later]*\n",
-    "> - **Balance**: balance of customer in the bank account. *[scaled later]*\n",
-    "\n"
+    "> - `IsActiveMember`: active customers.\n",
+    "> - `Tenure`: years the customer is a client of the bank.\n",
+    "> - `HasCrCard`: denotes whether or not a customer has a credit card. \n",
+    "> - `Age`: customer age. *[scaled later]*\n",
+    "> - `EstimatedSalary`: customer estimated salary. *[scaled later]*\n",
+    "> - `Balance`: balance of customer in the bank account. *[scaled later]*"
    ]
   },
   {
@@ -463,12 +462,13 @@
     "> - *Balance_EstimatedSalary_Ratio*\n",
     "> - *Balance_IsZero*\n",
     "> - *Balance_GeographyMean_Ratio*\n",
-    "> - *Tenure_Age_Ratio*"
+    "> - *Tenure_Age_Ratio*\n",
+    "> - *NumOfProducts_Tenure_Ratio*"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -503,7 +503,7 @@
        "      <th>EstimatedSalary_CreditScore_Ratio</th>\n",
        "      <th>CreditScore_EstimatedSalary_Ratio</th>\n",
        "      <th>...</th>\n",
-       "      <th>Tenure_Age_Ratio</th>\n",
+       "      <th>NumOfProducts_Tenure_Ratio</th>\n",
        "      <th>Geography_Germany</th>\n",
        "      <th>Geography_Spain</th>\n",
        "      <th>Gender_Male</th>\n",
@@ -529,7 +529,7 @@
        "      <td>163.730016</td>\n",
        "      <td>0.006108</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.047619</td>\n",
+       "      <td>0.500</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -553,7 +553,7 @@
        "      <td>185.102928</td>\n",
        "      <td>0.005402</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.024390</td>\n",
+       "      <td>1.000</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
@@ -577,7 +577,7 @@
        "      <td>226.955319</td>\n",
        "      <td>0.004406</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.190476</td>\n",
+       "      <td>0.375</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -601,7 +601,7 @@
        "      <td>134.229800</td>\n",
        "      <td>0.007450</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.025641</td>\n",
+       "      <td>2.000</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -625,7 +625,7 @@
        "      <td>93.040118</td>\n",
        "      <td>0.010748</td>\n",
        "      <td>...</td>\n",
-       "      <td>0.046512</td>\n",
+       "      <td>0.500</td>\n",
        "      <td>False</td>\n",
        "      <td>True</td>\n",
        "      <td>False</td>\n",
@@ -638,7 +638,7 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 23 columns</p>\n",
+       "<p>5 rows × 24 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -656,12 +656,12 @@
        "3         93826.63       0                         134.229800   \n",
        "4         79084.10       0                          93.040118   \n",
        "\n",
-       "   CreditScore_EstimatedSalary_Ratio  ...  Tenure_Age_Ratio  \\\n",
-       "0                           0.006108  ...          0.047619   \n",
-       "1                           0.005402  ...          0.024390   \n",
-       "2                           0.004406  ...          0.190476   \n",
-       "3                           0.007450  ...          0.025641   \n",
-       "4                           0.010748  ...          0.046512   \n",
+       "   CreditScore_EstimatedSalary_Ratio  ...  NumOfProducts_Tenure_Ratio  \\\n",
+       "0                           0.006108  ...                       0.500   \n",
+       "1                           0.005402  ...                       1.000   \n",
+       "2                           0.004406  ...                       0.375   \n",
+       "3                           0.007450  ...                       2.000   \n",
+       "4                           0.010748  ...                       0.500   \n",
        "\n",
        "   Geography_Germany  Geography_Spain  Gender_Male  CreditScoreBins_Medium  \\\n",
        "0              False            False        False                    True   \n",
@@ -684,10 +684,10 @@
        "3            False            False  \n",
        "4            False            False  \n",
        "\n",
-       "[5 rows x 23 columns]"
+       "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -717,6 +717,10 @@
     "\n",
     "# Tenure / Age\n",
     "df['Tenure_Age_Ratio'] = np.where(df['Age'] == 0, 0, df['Tenure'] / df['Age'])\n",
+    "\n",
+    "# NumOf / Age\n",
+    "df['NumOfProducts_Tenure_Ratio'] = np.where(df['Tenure'] == 0, 0, df['NumOfProducts'] / df['Tenure'])\n",
+    "\n",
     "\n",
     "#########\n",
     "# From the first feature engineering loop:\n",
