new file:   churn-prediction/docs/model_control.csv 	new file:   churn-prediction/docs/model_control_imbalance.csv 	modified:   churn-prediction/notebooks/feature_engineering.ipynb 	modified:   churn-prediction/notebooks/model_training.ipynb

--- a/churn-prediction/notebooks/feature_engineering.ipynb
+++ b/churn-prediction/notebooks/feature_engineering.ipynb
@@ -457,13 +457,13 @@
     "\n",
     "\n",
     "**_Features to be created:_**\n",
-    "> - *EstimatedSalary_CreditScore_Ratio*\n",
-    "> - *CreditScore_EstimatedSalary_Ratio*\n",
-    "> - *Balance_EstimatedSalary_Ratio*\n",
-    "> - *Balance_IsZero*\n",
-    "> - *Balance_GeographyMean_Ratio*\n",
-    "> - *Tenure_Age_Ratio*\n",
-    "> - *NumOfProducts_Tenure_Ratio*"
+    "> - `EstimatedSalary_CreditScore_Ratio`\n",
+    "> - `CreditScore_EstimatedSalary_Ratio`\n",
+    "> - `Balance_EstimatedSalary_Ratio`\n",
+    "> - `Balance_IsZero`\n",
+    "> - `Balance_GeographyMean_Ratio`\n",
+    "> - `Tenure_Age_Ratio`\n",
+    "> - `NumOfProducts_Tenure_Ratio`"
    ]
   },
   {
