modified:   README.md 	modified:   churn-prediction/notebooks/EDA.ipynb

--- a/churn-prediction/notebooks/EDA.ipynb
+++ b/churn-prediction/notebooks/EDA.ipynb
@@ -6,7 +6,6 @@
    "metadata": {},
    "source": [
     "# Exploratory Data Analysis (EDA) \n",
-    "_Author: Laiza Milena Scheid Parizotto_\n",
     "\n",
     "It involves examining and visualizing the data to gain insights, discover patterns, and identify potential relationships between variables.The importance of EDA lies in its ability to provide a deeper understanding of the dataset, uncover hidden patterns, and guide subsequent steps in the analysis process. \n",
     "\n",
@@ -14,18 +13,19 @@
     "\n",
     "1. **Discover Data Quality Issues**: identify missing values or inconsistencies in the dataset. Understanding data quality issues allows for appropriate data cleaning and preprocessing steps.\n",
     "\n",
-    "2. **Understand Variable Distributions**: By analyzing the distributions of variables, such as the target variable (\"Exited\"), we can assess class imbalances and determine the need for techniques like data resampling.\n",
+    "2. **Understand Variable Distributions**: By analyzing the distributions of variables, such as the target variable `Exited`, we can assess class imbalances and determine the need for techniques like data resampling.\n",
     "\n",
     "3. **Uncover Patterns and Relationships**: identification of correlations, dependencies, or trends between variables. This information helps select relevant features for modeling and enables the formulation of hypotheses about the underlying dynamics.\n",
     "\n",
     "4. **Detect Anomalies and Outliers**: detection of anomalies or outliers that could impact the performance of the predictive model. By understanding these anomalies, appropriate treatment can be applied, such as removing outliers or using robust modeling techniques.\n",
     "\n",
-    "5. **Communicate Findings Effectively**: conclusions and concise insights about the dataset. Guidelines for feature engineering. "
+    "> Conclusions and concise insights about the dataset will be presented along the notebook. \n",
+    "> Each section will also include guidelines for feature engineering. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,7 @@
        "4         79084.10       0  "
       ]
      },
-     "execution_count": 25,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -225,8 +225,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "> This is a binary classification problem, where the target variable is \"Exited\".\n",
-    "> From now on, I will call **Exited** when *\"Exited\" is 1*, and **Not Exited** when *\"Exited\" is 0*."
+    "> This is a **binary classification problem**, where the target variable is `Exited`.\n",
+    "> From now on, I will call **Exited/Churn** when *`Exited` is 1*, and **Not Exited/Not Churn** when *`Exited` is 0*."
    ]
   },
   {
@@ -238,11 +238,9 @@
     "\n",
     "The goal is to verify **Data integrity**.\n",
     "\n",
-    ">*check data formats*\n",
-    "\n",
-    "> *identify missing values*\n",
-    "\n",
-    "> *identify duplicate entries*"
+    "> - *Check data formats*\n",
+    "> - *Identify missing values*\n",
+    "> - *Identify duplicate entries*"
    ]
   },
   {
@@ -1604,11 +1602,12 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "attachments": {},
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "<p style=\"text-align: right;\"><em>Author: Laiza Milena Scheid Parizotto</em></p>\n"
+   ]
   }
  ],
  "metadata": {
