modified:   churn-prediction/notebooks/EDA.ipynb

--- a/churn-prediction/notebooks/EDA.ipynb
+++ b/churn-prediction/notebooks/EDA.ipynb
@@ -493,7 +493,7 @@
    "metadata": {},
    "source": [
     "## 2. Understand Target Variable Distribution\n",
-    "> Check for data imbalance"
+    "> - Check for data imbalance"
    ]
   },
   {
@@ -531,9 +531,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "From this chart we can verify that the data is <span style=\"background-color:lightgray\">not balanced</span>.\n",
-    "\n",
-    "This imbalance should be considered for the entire EDA. Special attention for charts with absolute value and counts.\n",
+    "> From this chart we can verify that the data is <span style=\"background-color:lightgray\">not balanced</span>. This imbalance should be considered for the entire EDA. *Special attention for charts with absolute value* and counts.\n",
     "\n",
     "<span style='color:white; background-color:#35193e'>Consideration for feature engineering:</span>\n",
     "- It's important to handle class imbalance appropriately to avoid biased model performance and ensure fair and accurate predictions for both classes.\n",
