modified:   churn-prediction/notebooks/EDA.ipynb

--- a/churn-prediction/notebooks/EDA.ipynb
+++ b/churn-prediction/notebooks/EDA.ipynb
@@ -19,8 +19,7 @@
     "\n",
     "4. **Detect Anomalies and Outliers**: detection of anomalies or outliers that could impact the performance of the predictive model. By understanding these anomalies, appropriate treatment can be applied, such as removing outliers or using robust modeling techniques.\n",
     "\n",
-    "> Conclusions and concise insights about the dataset will be presented along the notebook. \n",
-    "> Each section will also include guidelines for feature engineering. "
+    "> Conclusions and concise insights about the dataset will be presented along the notebook. Each section will also include guidelines for feature engineering. "
    ]
   },
   {
